--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "pg": "^8.15.1",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.7",
+    "sqlite3": "^5.1.7",
     "twilio": "^5.5.2"
   }
 }
