--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.7",
     "sqlite3": "^5.1.7",
-    "twilio": "^5.5.2"
+    "twilio": "^5.5.2",
+    "uuid": "^11.1.0"
   }
 }
